--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,3 @@
-body {
-    font-family: Arial;
-}
 h1 {
     color: rgb(135, 135, 135);
     font-size: 24px;
@@ -44,4 +41,20 @@ ul {
     margin: 0 auto;
     text-align: left;
     font-size: small;
+}
+
+.weather-six-days{
+    margin-top: 20px;
+    text-align: center;
+}
+.day{
+    opacity: 0.5;
+    font-size: 18px;
+}
+.temperature-small-min{
+    opacity: 0.5;
+    font-size: 16px;
+}
+.temperature-small-max{
+    font-size: 16px;
 }
